Changement dans les sprites des déplacements des personnages